--- a/src/App.css
+++ b/src/App.css
@@ -6,5 +6,13 @@
  */
 
 body{
-  background-color: #f6f5f0;
+  background-color: #ffffff;
+  padding-top: 0.5rem;
+}
+.container{
+  display: grid;
+  grid-template-columns: 1fr 8fr 1fr;
+}
+.col-8{
+  background-color: #f6f6ef;
 }
